--- a/config.html
+++ b/config.html
@@ -39,12 +39,8 @@
         </select>
     </p>
     <div id="guitarraContainer">
-        <div id="guitarraNotasAfinacion">
-            
-        </div>
-        <div id="guitarraNotasAcorde">
-
-        </div>
+        <div id="guitarraNotasAfinacion"></div>
+        <div id="guitarraNotasAcorde"></div>
         <div id="guitarra"></div>
     </div>
 
