Empezar juego gamificación

--- a/config.html
+++ b/config.html
@@ -47,6 +47,7 @@
     <script src="sistema.js"></script>
     <button onclick="volverIndex()">Volver a la configuración</button>
     <button onclick="generarSonido()">Sonido</button>
+    <button onclick="irAJuego()">Practica en el mástil</button>
 </body>
 
 </html>
