--- a/juego.html
+++ b/juego.html
@@ -9,13 +9,17 @@
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
     <link rel="stylesheet" href="estilo.css">
+    <script src="sistema.js"></script>
 </head>
 
 <body>
     <header>
-        <h1>Gamificación</h1>
+        <h1>Juego para practicar en el mástil</h1>
     </header>
     
+    <main>
+        <button onclick="juego.comenzar()">Empezar a jugar</button>
+    </main>
 </body>
 
 </html>
