Empezando con el juego

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
         </select>
     
         <div id="personalizadaContainer" style="display: none;">
-            <div id="cuerdasContainer">
-                
-            </div>
+            <div id="cuerdasContainer"></div>
             <button type="button" id="agregarCuerda">Agregar Cuerda</button>
             <button type="button" id="eliminarUltimaCuerda" style="display: none;">Eliminar cuerda</button>
         </div>
