Indicadores en la pantalla de generación de acordes

--- a/config.html
+++ b/config.html
@@ -38,6 +38,11 @@
             <option value="Septima">Séptima</option>
         </select>
     </p>
+    <div id="titulos">
+        <p>Afinación</p>
+        <p>Acorde</p>
+        <p>Mástil</p>
+    </div>
     <div id="guitarraContainer">
         <div id="guitarraNotasAfinacion"></div>
         <div id="guitarraNotasAcorde"></div>
