Sonido en funcionamiento

--- a/config.html
+++ b/config.html
@@ -33,9 +33,16 @@
         </select>
         <label for="tipoAcorde">Tipo de Acorde:</label>
         <select name="tipoAcorde" id="tipoAcorde">
-            <option value="Mayor">Mayor</option>
-            <option value="Menor">Menor</option>
-            <option value="Septima">Séptima</option>
+            <option value="Mayor">M</option>
+            <option value="Menor">m</option>
+            <option value="Septima">7</option>
+            <option value="Aumentado">Aug</option>
+            <option value="Disminuido">dim</option>
+            <option value="MayorSiete">M7</option>
+            <option value="MenorSiete">m7</option>
+            <option value="MenorSieteB5">m7b5</option>
+            <option value="SusDos">Sus2</option>
+            <option value="SusCuatro">Sus4</option>
         </select>
     </p>
     <div id="titulos">
