--- a/config.html
+++ b/config.html
@@ -13,8 +13,9 @@
 
 <body>
     <header>
-        <h1>Generador de acordes</h1>
+        <h1>Aplicación de generador de acordes</h1>
     </header>
+    <h2>Generador de acordes</h2>
     <p id="acordeForm">
         <label for="notaBase">Nota Base:</label>
         <select name="notaBase" id="notaBase">
