Cambios en la interfaz de usuario Materialize CSS

--- a/juego.html
+++ b/juego.html
@@ -14,12 +14,14 @@
 
 <body>
     <header>
-        <h1>Juego para practicar en el mástil</h1>
+        <h1>Juego para practicar acordes</h1>
     </header>
-    
     <main>
-        <button onclick="juego.comenzar()">Empezar a jugar</button>
+        <div id="juegoContainer">
+            <button onclick="juego.comenzar()">Empezar a jugar</button>
+        </div>
     </main>
+    
 </body>
 
 </html>
