--- a/config.html
+++ b/config.html
@@ -16,51 +16,59 @@
         <h1>Aplicación de generador de acordes</h1>
     </header>
     <h2>Generador de acordes</h2>
-    <p id="acordeForm">
-        <label for="notaBase">Nota Base:</label>
-        <select name="notaBase" id="notaBase">
-            <option value="C">C</option>
-            <option value="C#">C#</option>
-            <option value="D">D</option>
-            <option value="D#">D#</option>
-            <option value="E">E</option>
-            <option value="F">F</option>
-            <option value="F#">F#</option>
-            <option value="G">G</option>
-            <option value="G#">G#</option>
-            <option value="A">A</option>
-            <option value="A#">A#</option>
-            <option value="B">B</option>
-        </select>
-        <label for="tipoAcorde">Tipo de Acorde:</label>
-        <select name="tipoAcorde" id="tipoAcorde">
-            <option value="Mayor">M</option>
-            <option value="Menor">m</option>
-            <option value="Septima">7</option>
-            <option value="Aumentado">Aug</option>
-            <option value="Disminuido">dim</option>
-            <option value="MayorSiete">M7</option>
-            <option value="MenorSiete">m7</option>
-            <option value="MenorSieteB5">m7b5</option>
-            <option value="SusDos">Sus2</option>
-            <option value="SusCuatro">Sus4</option>
-        </select>
-    </p>
-    <div id="titulos">
-        <p>Afinación</p>
-        <p>Acorde</p>
-        <p>Mástil</p>
+    <div id="acordeForm">
+        <div id="configuracionAcorde">
+            <label for="notaBase">Nota:</label>
+            <select name="notaBase" id="notaBase">
+                <option value="C">C</option>
+                <option value="C#">C#</option>
+                <option value="D">D</option>
+                <option value="D#">D#</option>
+                <option value="E">E</option>
+                <option value="F">F</option>
+                <option value="F#">F#</option>
+                <option value="G">G</option>
+                <option value="G#">G#</option>
+                <option value="A">A</option>
+                <option value="A#">A#</option>
+                <option value="B">B</option>
+            </select>
+            <label for="tipoAcorde">Acorde:</label>
+            <select name="tipoAcorde" id="tipoAcorde">
+                <option value="Mayor">M</option>
+                <option value="Menor">m</option>
+                <option value="Septima">7</option>
+                <option value="Aumentado">Aug</option>
+                <option value="Disminuido">dim</option>
+                <option value="MayorSiete">M7</option>
+                <option value="MenorSiete">m7</option>
+                <option value="MenorSieteB5">m7b5</option>
+                <option value="SusDos">Sus2</option>
+                <option value="SusCuatro">Sus4</option>
+            </select>
+        </div>
     </div>
-    <div id="guitarraContainer">
-        <div id="guitarraNotasAfinacion"></div>
-        <div id="guitarraNotasAcorde"></div>
-        <div id="guitarra"></div>
+    <main>
+        <div id="mainContainer">
+            <div id="titulos">
+                <p>Afinación</p>
+                <p>Acorde</p>
+            </div>
+            <div id="guitarraContainer">
+                <div id="guitarraNotasAfinacion"></div>
+                <div id="guitarraNotasAcorde"></div>
+                <div id="guitarra"></div>
+            </div>
+        </div>
+    </main>
+
+    <div id="botonesConfig">
+        <button onclick="volverIndex()">Volver a la configuración</button>
+        <button onclick="generarSonido()">Sonido</button>
+        <button onclick="irAJuego()">Practica en el mástil</button>
     </div>
 
     <script src="sistema.js"></script>
-    <button onclick="volverIndex()">Volver a la configuración</button>
-    <button onclick="generarSonido()">Sonido</button>
-    <button onclick="irAJuego()">Practica en el mástil</button>
 </body>
 
 </html>
