--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <h2>Configuración de la afinación</h2>
     <div class="row">
         <form id="afinacionForm" class="col s12">
-            <div class="row">
-                <div class="input-field col s6">
+            <div class="row"  style="margin-bottom: 0;">
+                <div class="input-field col s3">
                     <select name="afinacionPredefinida" id="afinacionPredefinida">
                         <option value="estandar">Estandar (EADGBE)</option>
                         <option value="dropD">Drop D (DADGBE)</option>
@@ -29,6 +29,12 @@
                         <option value="personalizada">Personalizada</option>
                     </select>
                     <label for="afinacionPredefinida">Afinación Predefinida:</label>
+                </div>
+                
+                <div class="input-field col s3" id="nombreAfinacionContainer" style="display: none;">
+                    <input type="text" id="nombreAfinacion" name="nombreAfinacion">
+                    <label for="nombreAfinacion">Nombre de la afinación:</label>
+                    <p id="mensajeNombreAfinacion">Introduce un nombre para poder usarla posteriormente</p>
                 </div>
             </div>
 
@@ -198,15 +204,20 @@
                         </div>
                     </div>
                 </div>
-                <button type="button" class="waves-effect waves-light btn" id="agregarCuerda">Agregar Cuerda</button>
-                <button type="button" class="waves-effect waves-light btn" id="eliminarUltimaCuerda"
-                    style="display: none;">Eliminar cuerda</button>
+                <div class="row">
+                    <div class="col">
+                        <button type="button" class="waves-effect waves-light btn" id="agregarCuerda">Agregar Cuerda</button>
+                        <button type="button" class="waves-effect waves-light btn" id="eliminarUltimaCuerda" style="display: none;">Eliminar cuerda</button>
+                        <button type="button" class="waves-effect waves-light btn" id="addAfinacionPersonalizada">Guardar afinación</button>
+                    </div>
+                    <div class="col">
+                        <p id="mensajeErrorGuardarAfinacion"></p>
+                    </div>
+                </div>
             </div>
             <button type="submit">Establecer afinación</button>
         </form>
     </div>
-
     <script src="node_modules/materialize-css/dist/js/materialize.min.js"></script>
 </body>
-
 </html>
