Es posible añadir afinaciones personalizadas

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="input-field col s3" id="nombreAfinacionContainer" style="display: none;">
                     <input type="text" id="nombreAfinacion" name="nombreAfinacion">
                     <label for="nombreAfinacion">Nombre de la afinación:</label>
-                    <p id="mensajeNombreAfinacion">Introduce un nombre para poder usarla posteriormente</p>
+                    <p id="mensajeNombreAfinacion">Introduce un nombre para guardarla y usarla posteriormente</p>
                 </div>
             </div>
 
