--- a/config.html
+++ b/config.html
@@ -61,7 +61,10 @@
             </div>
         </div>
     </main>
-
+    <div id="botoneraSeleccionarAcordes">
+        <button onclick="anteriorAcorde()" id="izquierda" class="btn waves-effect waves-light">Anterior acorde</button>
+        <button onclick="siguienteAcorde()" id="derecha" class="btn waves-effect waves-light">Siguiente acorde</button>
+    </div>
     <div id="botonesConfig">
         <button onclick="volverIndex()">Volver a la configuración</button>
         <button onclick="generarSonido()">Sonido</button>
@@ -69,6 +72,7 @@
     </div>
 
     <script src="sistema.js"></script>
+    <script src="node_modules/materialize-css/dist/js/materialize.min.js"></script>
 </body>
 
 </html>
