Las afinaciones creadas por el usuario ahora se pueden eliminar

--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                         <button type="button" class="waves-effect waves-light btn" id="agregarCuerda">Agregar Cuerda</button>
                         <button type="button" class="waves-effect waves-light btn" id="eliminarUltimaCuerda" style="display: none;">Eliminar cuerda</button>
                         <button type="button" class="waves-effect waves-light btn" id="addAfinacionPersonalizada">Guardar afinación</button>
+                        <button type="button" class="waves-effect waves-light red" id="eliminarAfinacionPersonalizada" style="display: none;">Eliminar afinación</button>
                     </div>
                     <div class="col">
                         <p id="mensajeErrorGuardarAfinacion"></p>
