--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Aplicación de generador de acordes</h1>
     </header>
     <h2>Configuración de la afinación</h2>
-    <div class="row">
+    <div id="configContainer" class="row">
         <form id="afinacionForm" class="col s12">
             <div class="row"  style="margin-bottom: 0;">
                 <div class="input-field col s3">
@@ -40,8 +40,8 @@
 
             <div class="row" id="personalizadaContainer" style="display: none;">
                 <div class="col s12" id="cuerdasContainer">
-                    <div class="row" style="margin-bottom: 0;">
-                        <div class="input-field col s6">
+                    <div class="row" style="margin-bottom: 0; display: flex; justify-content: center;">
+                        <div>
                             <div class="row" id="cuerda1" style="margin-bottom: 0;">
                                 <div class="col s6">
                                     <div class="input-field">
@@ -81,8 +81,8 @@
                         </div>
                     </div>
 
-                    <div class="row" style="margin-bottom: 0;">
-                        <div class="input-field col s6">
+                    <div class="row" style="margin-bottom: 0; display: flex; justify-content: center;">
+                        <div>
                             <div class="row" id="cuerda2" style="margin-bottom: 0;">
                                 <div class="col s6">
                                     <div class="input-field">
@@ -122,8 +122,8 @@
                         </div>
                     </div>
 
-                    <div class="row" style="margin-bottom: 0;">
-                        <div class="input-field col s6">
+                    <div class="row" style="margin-bottom: 0; display: flex; justify-content: center;">
+                        <div>
                             <div class="row" id="cuerda3" style="margin-bottom: 0;">
                                 <div class="col s6">
                                     <div class="input-field">
@@ -163,8 +163,8 @@
                         </div>
                     </div>
 
-                    <div class="row" style="margin-bottom: 0;">
-                        <div class="input-field col s6">
+                    <div class="row" style="margin-bottom: 0; display: flex; justify-content: center;">
+                        <div>
                             <div class="row" id="cuerda4" style="margin-bottom: 0;">
                                 <div class="col s6">
                                     <div class="input-field">
