Estruturación de archivos js e inlcuir tests para el módulo Nota

--- a/config.html
+++ b/config.html
@@ -70,7 +70,8 @@
         <button onclick="generarSonido()">Sonido</button>
         <button onclick="irAJuego()">Practica en el mástil</button>
     </div>
-
+    <script src="nota.js"></script>
+    <script src="guitarra.js"></script>
     <script src="sistema.js"></script>
     <script src="node_modules/materialize-css/dist/js/materialize.min.js"></script>
 </body>
