Reestructuración de archivos

--- a/juego.html
+++ b/juego.html
@@ -9,6 +9,9 @@
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
     <link rel="stylesheet" href="estilo.css">
+    <script src="nota.js"></script>
+    <script src="guitarra.js"></script>
+    <script src="servicioAfinacion.js"></script>
     <script src="sistema.js"></script>
 </head>
 
@@ -22,5 +25,4 @@
         </div>
     </main>
 </body>
-
 </html>
