--- a/config.html
+++ b/config.html
@@ -72,6 +72,7 @@
     </div>
     <script src="nota.js"></script>
     <script src="guitarra.js"></script>
+    <script src="servicioAfinacion.js"></script>
     <script src="sistema.js"></script>
     <script src="node_modules/materialize-css/dist/js/materialize.min.js"></script>
 </body>
