--- a/config.html
+++ b/config.html
@@ -8,6 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
+    <!--<link rel="stylesheet" href="lib/materialize/materialize.min.css">-->
     <link rel="stylesheet" href="estilo.css">
 </head>
 
