--- a/juego.html
+++ b/juego.html
@@ -12,10 +12,16 @@
     <script src="nota.js"></script>
     <script src="guitarra.js"></script>
     <script src="servicioAfinacion.js"></script>
+    <script src="acorde.js"></script>
+    <script src="aleatorio.js"></script>
+    <script src="juego.js"></script>
     <script src="sistema.js"></script>
 </head>
 
 <body>
+    <script>
+        let juego = new Juego(guitarra);
+    </script>
     <header>
         <h1>Juego para practicar acordes</h1>
     </header>
