--- a/config.html
+++ b/config.html
@@ -74,8 +74,8 @@
     <script src="nota.js"></script>
     <script src="guitarra.js"></script>
     <script src="servicioAfinacion.js"></script>
+    <script src="acorde.js"></script>
     <script src="sistema.js"></script>
     <script src="lib/materialize/materialize.min.js"></script>
 </body>
-
 </html>
