arreglos en campo nombre afinación

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <div id="nombreAfinacionContainer" class="input-field col s12" style="display: none;">
                 <input type="text" id="nombreAfinacion" name="nombreAfinacion">
-                <label for="nombreAfinacion">Nombre de la afinación:</label>
+                <label for="nombreAfinacion" class="active">Nombre de la afinación:</label>
                 <span class="helper-text" id="mensajeNombreAfinacion">Introduce un nombre para guardarla y usarla
                     posteriormente</span>
             </div>
