materialize buttons icons

--- a/config.html
+++ b/config.html
@@ -8,6 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="lib/materialize/materialize.min.css">
     <link rel="stylesheet" href="estilo.css">
 </head>
@@ -68,15 +69,15 @@
                 <p></p>
                 <p></p>
                 <div id="botoneraSeleccionarAcordes">
-                    <button onclick="anteriorAcorde()" id="izquierda" class="waves-effect waves-light btn">Anterior</button>
-                    <button onclick="siguienteAcorde()" id="derecha" class="waves-effect waves-light btn">Siguiente</button>
+                    <button onclick="anteriorAcorde()" id="izquierda" class="waves-effect waves-light btn"><i class="material-icons left">arrow_back</i></button>
+                    <button onclick="siguienteAcorde()" id="derecha" class="waves-effect waves-light btn"><i class="material-icons right">arrow_forward</i></button>
                 </div>
             </div>
         </div>
     </main>
     <div id="botonesConfig">
         <button class="waves-effect waves-light btn" onclick="volverIndex()">Volver a la configuración</button>
-        <button class="waves-effect waves-light btn" onclick="generarSonido()"><i class="material-icons left">cloud</i>Escuchar acorde</button>
+        <button class="waves-effect waves-light btn" onclick="generarSonido()"><i class="material-icons right">music_note</i>Escuchar acorde</button>
         <button class="waves-effect waves-light btn blue" onclick="irAJuego()">Practica en el mástil</button>
     </div>
     <script src="nota.js"></script>
