more icons and materialize design

--- a/config.html
+++ b/config.html
@@ -76,9 +76,9 @@
         </div>
     </main>
     <div id="botonesConfig">
-        <button class="waves-effect waves-light btn" onclick="volverIndex()">Volver a la configuración</button>
-        <button class="waves-effect waves-light btn" onclick="generarSonido()"><i class="material-icons right">music_note</i>Escuchar acorde</button>
-        <button class="waves-effect waves-light btn blue" onclick="irAJuego()">Practica en el mástil</button>
+        <button class="waves-effect waves-light btn" onclick="volverIndex()"><i class="material-icons right">settings</i>Volver a la configuración</button>
+        <button class="waves-effect waves-light btn" onclick="generarSonido()"><i class="material-icons right">play_arrow</i>Escuchar acorde</button>
+        <button class="waves-effect waves-light btn blue" onclick="irAJuego()"><i class="material-icons right">sports_esports</i>Practica en el mástil</button>
     </div>
     <script src="nota.js"></script>
     <script src="guitarra.js"></script>
