Pruebas guitarra y textos corregidos

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <form id="afinacionForm">
             <div class="input-field col s12">
                 <select name="afinacionPredefinida" id="afinacionPredefinida">
-                    <option value="estandar">Estandar (EADGBE)</option>
+                    <option value="estandar">Estándar (EADGBE)</option>
                     <option value="dropD">Drop D (DADGBE)</option>
                     <option value="openD">Open D (DADF#AD)</option>
                     <option value="personalizada">Personalizada</option>
