Se han añadido nuevas afinaciones predeterminadas

--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
             <div class="input-field col s12">
                 <select name="afinacionPredefinida" id="afinacionPredefinida">
                     <option value="estandar">Estándar (EADGBE)</option>
-                    <option value="dropD">Drop D (DADGBE)</option>
+                    <option value="openC">Open C (CGCEGC)</option>
                     <option value="openD">Open D (DADF#AD)</option>
+                    <option value="openE">Open E (EBEG#BE)</option>
+                    <option value="openG">Open G (DGDGBD)</option>
+                    <option value="openA">Open A (EAEAC#E)</option>
+                    <option value="dropD">Drop D (DADGBE)</option>
                     <option value="personalizada">Personalizada</option>
                 </select>
                 <label for="afinacionPredefinida">Afinación Predefinida:</label>
