Sonido acordes, afinaciones personalizadas al revés, grados.

--- a/config.html
+++ b/config.html
@@ -21,7 +21,7 @@
     <div id="acordeForm">
         <div id="configuracionAcorde">
             <div>
-                <label for="notaBase">Nota:</label>
+                <label for="notaBase">Tónica (nota base):</label>
                 <select name="notaBase" id="notaBase">
                     <option value="C">C</option>
                     <option value="C#">C#</option>
@@ -59,6 +59,7 @@
             <div id="titulos">
                 <p>Afinación</p>
                 <p>Acorde</p>
+                <p></p>
             </div>
             <div id="guitarraContainer">
                 <div id="guitarraNotasAfinacion"></div>
