--- a/index.html
+++ b/index.html
@@ -195,7 +195,85 @@
                                 </div>
                             </div>
                         </div>
-                    </div>                    
+                    </div>
+                    
+                    <div class="col s12">
+                        <div class="row" id="cuerda5" style="margin-bottom: 0;">
+                            <div class="col s6">
+                                <div class="input-field">
+                                    <select name="personalizadaCuerda5Nota" id="personalizadaCuerda5Nota">
+                                        <option value="C">C (Do)</option>
+                                        <option value="C#">C# (Do#)</option>
+                                        <option value="D">D (Re)</option>
+                                        <option value="D#">D# (Re#)</option>
+                                        <option value="E">E (Mi)</option>
+                                        <option value="F">F (Fa)</option>
+                                        <option value="F#">F# (Fa#)</option>
+                                        <option value="G">G (Sol)</option>
+                                        <option value="G#">G# (Sol#)</option>
+                                        <option value="A">A (La)</option>
+                                        <option value="A#">A# (La#)</option>
+                                        <option value="B">B (Si)</option>
+                                    </select>
+                                    <label for="personalizadaCuerda5Nota">Nota Cuerda 5:</label>
+                                </div>
+                            </div>
+                            <div class="col s6">
+                                <div class="input-field">
+                                    <select name="personalizadaCuerda5Octava" id="personalizadaCuerda5Octava">
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                        <option value="7">7</option>
+                                        <option value="8">8</option>
+                                    </select>
+                                    <label for="personalizadaCuerda5Octava">Octava Cuerda 5:</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col s12">
+                        <div class="row" id="cuerda6" style="margin-bottom: 0;">
+                            <div class="col s6">
+                                <div class="input-field">
+                                    <select name="personalizadaCuerda6Nota" id="personalizadaCuerda6Nota">
+                                        <option value="C">C (Do)</option>
+                                        <option value="C#">C# (Do#)</option>
+                                        <option value="D">D (Re)</option>
+                                        <option value="D#">D# (Re#)</option>
+                                        <option value="E">E (Mi)</option>
+                                        <option value="F">F (Fa)</option>
+                                        <option value="F#">F# (Fa#)</option>
+                                        <option value="G">G (Sol)</option>
+                                        <option value="G#">G# (Sol#)</option>
+                                        <option value="A">A (La)</option>
+                                        <option value="A#">A# (La#)</option>
+                                        <option value="B">B (Si)</option>
+                                    </select>
+                                    <label for="personalizadaCuerda6Nota">Nota Cuerda 6:</label>
+                                </div>
+                            </div>
+                            <div class="col s6">
+                                <div class="input-field">
+                                    <select name="personalizadaCuerda6Octava" id="personalizadaCuerda6Octava">
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                        <option value="7">7</option>
+                                        <option value="8">8</option>
+                                    </select>
+                                    <label for="personalizadaCuerda6Octava">Octava Cuerda 6:</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
                         
