Clasificación en carpetas. Aciertos y fallos juego

--- a/config.html
+++ b/config.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="lib/materialize/materialize.min.css">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilo/estilo.css">
 </head>
 
 <body>
@@ -81,11 +81,11 @@
         <button class="waves-effect waves-light btn" onclick="generarSonido()"><i class="material-icons right">play_arrow</i>Escuchar acorde</button>
         <button class="waves-effect waves-light btn blue" onclick="irAJuego()"><i class="material-icons right">sports_esports</i>Practica en el mástil</button>
     </div>
-    <script src="nota.js"></script>
-    <script src="guitarra.js"></script>
-    <script src="servicioAfinacion.js"></script>
-    <script src="acorde.js"></script>
-    <script src="sistema.js"></script>
+    <script src="js/baseMusica/nota.js"></script>
+    <script src="js/baseMusica/guitarra.js"></script>
+    <script src="js/servicios/servicioAfinacion.js"></script>
+    <script src="js/baseMusica/acorde.js"></script>
+    <script src="js/sistema.js"></script>
     <script src="lib/materialize/materialize.min.js"></script>
 </body>
 </html>
