--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Configuración de acorde</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="lib/materialize/materialize.min.css">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilo/estilo.css">
 </head>
 
 <body>
@@ -301,7 +301,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="lib/materialize/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
