--- a/juego.html
+++ b/juego.html
@@ -10,14 +10,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="lib/materialize/materialize.min.css">
-    <link rel="stylesheet" href="estilo.css">
-    <script src="nota.js"></script>
-    <script src="guitarra.js"></script>
-    <script src="servicioAfinacion.js"></script>
-    <script src="acorde.js"></script>
-    <script src="aleatorio.js"></script>
-    <script src="juego.js"></script>
-    <script src="sistema.js"></script>
+    <link rel="stylesheet" href="estilo/estilo.css">
+    <script src="js/baseMusica/nota.js"></script>
+    <script src="js/baseMusica/guitarra.js"></script>
+    <script src="js/servicios/servicioAfinacion.js"></script>
+    <script src="js/baseMusica/acorde.js"></script>
+    <script src="js/servicios/aleatorio.js"></script>
+    <script src="js/juego.js"></script>
+    <script src="js/sistema.js"></script>
     <script src="lib/materialize/materialize.min.js"></script>
 </head>
 
