Cambios en la interfaz

--- a/config.html
+++ b/config.html
@@ -15,7 +15,12 @@
 
 <body>
     <header>
-        <h1>Aplicación de generador de acordes</h1>
+        <h1>GuitarApp</h1>
+        <nav>
+            <a href="index.html">Afinación</a>
+            <a href="config.html">Acordes</a>
+            <a href="juego.html">Juego</a>
+        </nav>
     </header>
     <h2>Generador de acordes</h2>
     <div id="acordeForm">
