--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 </head>
 
 <body>
-    <header class="center-align">
-        <h1>Aplicación de generador de acordes</h1>
+    <header>
+        <h1>GuitarApp</h1>
+        <nav>
+            <a href="index.html">Afinación</a>
+            <a href="config.html">Acordes</a>
+            <a href="juego.html">Juego</a>
+        </nav>
     </header>
     <div class="container">
         <h2 class="center-align">Configuración de la afinación</h2>
