--- a/index.html
+++ b/index.html
@@ -44,242 +44,7 @@
             </div>
 
             <div id="personalizadaContainer" style="display: none;">
-                <div id="cuerdasContainer" class="row justify-content-center">
-                    <!-- Cuerda 1 -->
-                    <div class="col s12">
-                        <div class="row" id="cuerda1" style="margin-bottom: 0;">
-                            <div class="col s6">
-                                <div class="input-field">
-                                    <select name="personalizadaCuerda1Nota" id="personalizadaCuerda1Nota">
-                                        <option value="C">C (Do)</option>
-                                        <option value="C#">C# (Do#)</option>
-                                        <option value="D">D (Re)</option>
-                                        <option value="D#">D# (Re#)</option>
-                                        <option value="E">E (Mi)</option>
-                                        <option value="F">F (Fa)</option>
-                                        <option value="F#">F# (Fa#)</option>
-                                        <option value="G">G (Sol)</option>
-                                        <option value="G#">G# (Sol#)</option>
-                                        <option value="A">A (La)</option>
-                                        <option value="A#">A# (La#)</option>
-                                        <option value="B">B (Si)</option>
-                                    </select>
-                                    <label for="personalizadaCuerda1Nota">Nota Cuerda 1:</label>
-                                </div>
-                            </div>
-                            <div class="col s6">
-                                <div class="input-field">
-                                    <select name="personalizadaCuerda1Octava" id="personalizadaCuerda1Octava">
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                        <option value="7">7</option>
-                                        <option value="8">8</option>
-                                    </select>
-                                    <label for="personalizadaCuerda1Octava">Octava Cuerda 1:</label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Cuerda 2 -->
-                    <div class="col s12">
-                        <div class="row" id="cuerda2" style="margin-bottom: 0;">
-                            <div class="col s6">
-                                <div class="input-field">
-                                    <select name="personalizadaCuerda2Nota" id="personalizadaCuerda2Nota">
-                                        <option value="C">C (Do)</option>
-                                        <option value="C#">C# (Do#)</option>
-                                        <option value="D">D (Re)</option>
-                                        <option value="D#">D# (Re#)</option>
-                                        <option value="E">E (Mi)</option>
-                                        <option value="F">F (Fa)</option>
-                                        <option value="F#">F# (Fa#)</option>
-                                        <option value="G">G (Sol)</option>
-                                        <option value="G#">G# (Sol#)</option>
-                                        <option value="A">A (La)</option>
-                                        <option value="A#">A# (La#)</option>
-                                        <option value="B">B (Si)</option>
-                                    </select>
-                                    <label for="personalizadaCuerda2Nota">Nota Cuerda 2:</label>
-                                </div>
-                            </div>
-                            <div class="col s6">
-                                <div class="input-field">
-                                    <select name="personalizadaCuerda2Octava" id="personalizadaCuerda2Octava">
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                        <option value="7">7</option>
-                                        <option value="8">8</option>
-                                    </select>
-                                    <label for="personalizadaCuerda2Octava">Octava Cuerda 2:</label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Cuerda 3 -->
-                    <div class="col s12">
-                        <div class="row" id="cuerda3" style="margin-bottom: 0;">
-                            <div class="col s6">
-                                <div class="input-field">
-                                    <select name="personalizadaCuerda3Nota" id="personalizadaCuerda3Nota">
-                                        <option value="C">C (Do)</option>
-                                        <option value="C#">C# (Do#)</option>
-                                        <option value="D">D (Re)</option>
-                                        <option value="D#">D# (Re#)</option>
-                                        <option value="E">E (Mi)</option>
-                                        <option value="F">F (Fa)</option>
-                                        <option value="F#">F# (Fa#)</option>
-                                        <option value="G">G (Sol)</option>
-                                        <option value="G#">G# (Sol#)</option>
-                                        <option value="A">A (La)</option>
-                                        <option value="A#">A# (La#)</option>
-                                        <option value="B">B (Si)</option>
-                                    </select>
-                                    <label for="personalizadaCuerda3Nota">Nota Cuerda 3:</label>
-                                </div>
-                            </div>
-                            <div class="col s6">
-                                <div class="input-field">
-                                    <select name="personalizadaCuerda3Octava" id="personalizadaCuerda3Octava">
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                        <option value="7">7</option>
-                                        <option value="8">8</option>
-                                    </select>
-                                    <label for="personalizadaCuerda3Octava">Octava Cuerda 3:</label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Cuerda 4 -->
-                    <div class="col s12">
-                        <div class="row" id="cuerda4" style="margin-bottom: 0;">
-                            <div class="col s6">
-                                <div class="input-field">
-                                    <select name="personalizadaCuerda4Nota" id="personalizadaCuerda4Nota">
-                                        <option value="C">C (Do)</option>
-                                        <option value="C#">C# (Do#)</option>
-                                        <option value="D">D (Re)</option>
-                                        <option value="D#">D# (Re#)</option>
-                                        <option value="E">E (Mi)</option>
-                                        <option value="F">F (Fa)</option>
-                                        <option value="F#">F# (Fa#)</option>
-                                        <option value="G">G (Sol)</option>
-                                        <option value="G#">G# (Sol#)</option>
-                                        <option value="A">A (La)</option>
-                                        <option value="A#">A# (La#)</option>
-                                        <option value="B">B (Si)</option>
-                                    </select>
-                                    <label for="personalizadaCuerda4Nota">Nota Cuerda 4:</label>
-                                </div>
-                            </div>
-                            <div class="col s6">
-                                <div class="input-field">
-                                    <select name="personalizadaCuerda4Octava" id="personalizadaCuerda4Octava">
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                        <option value="7">7</option>
-                                        <option value="8">8</option>
-                                    </select>
-                                    <label for="personalizadaCuerda4Octava">Octava Cuerda 4:</label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    
-                    <div class="col s12">
-                        <div class="row" id="cuerda5" style="margin-bottom: 0;">
-                            <div class="col s6">
-                                <div class="input-field">
-                                    <select name="personalizadaCuerda5Nota" id="personalizadaCuerda5Nota">
-                                        <option value="C">C (Do)</option>
-                                        <option value="C#">C# (Do#)</option>
-                                        <option value="D">D (Re)</option>
-                                        <option value="D#">D# (Re#)</option>
-                                        <option value="E">E (Mi)</option>
-                                        <option value="F">F (Fa)</option>
-                                        <option value="F#">F# (Fa#)</option>
-                                        <option value="G">G (Sol)</option>
-                                        <option value="G#">G# (Sol#)</option>
-                                        <option value="A">A (La)</option>
-                                        <option value="A#">A# (La#)</option>
-                                        <option value="B">B (Si)</option>
-                                    </select>
-                                    <label for="personalizadaCuerda5Nota">Nota Cuerda 5:</label>
-                                </div>
-                            </div>
-                            <div class="col s6">
-                                <div class="input-field">
-                                    <select name="personalizadaCuerda5Octava" id="personalizadaCuerda5Octava">
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                        <option value="7">7</option>
-                                        <option value="8">8</option>
-                                    </select>
-                                    <label for="personalizadaCuerda5Octava">Octava Cuerda 5:</label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col s12">
-                        <div class="row" id="cuerda6" style="margin-bottom: 0;">
-                            <div class="col s6">
-                                <div class="input-field">
-                                    <select name="personalizadaCuerda6Nota" id="personalizadaCuerda6Nota">
-                                        <option value="C">C (Do)</option>
-                                        <option value="C#">C# (Do#)</option>
-                                        <option value="D">D (Re)</option>
-                                        <option value="D#">D# (Re#)</option>
-                                        <option value="E">E (Mi)</option>
-                                        <option value="F">F (Fa)</option>
-                                        <option value="F#">F# (Fa#)</option>
-                                        <option value="G">G (Sol)</option>
-                                        <option value="G#">G# (Sol#)</option>
-                                        <option value="A">A (La)</option>
-                                        <option value="A#">A# (La#)</option>
-                                        <option value="B">B (Si)</option>
-                                    </select>
-                                    <label for="personalizadaCuerda6Nota">Nota Cuerda 6:</label>
-                                </div>
-                            </div>
-                            <div class="col s6">
-                                <div class="input-field">
-                                    <select name="personalizadaCuerda6Octava" id="personalizadaCuerda6Octava">
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                        <option value="7">7</option>
-                                        <option value="8">8</option>
-                                    </select>
-                                    <label for="personalizadaCuerda6Octava">Octava Cuerda 6:</label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div id="cuerdasContainer" class="row justify-content-center"></div>
             </div>
                         
             <div class="row">
@@ -306,6 +71,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="lib/materialize/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
+    <script src="js/baseMusica/nota.js"></script>
     <script src="js/index.js"></script>
 </body>
 
