--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>GuitarApp</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="lib/materialize/materialize.min.css">
+    <link rel="stylesheet" href="lib/materialize/materialize.min.js">
     <link rel="stylesheet" href="estilo/estilo.css">
 </head>
 
